fixed overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@ body {
   flex-direction: column;
   box-sizing: border-box;
   margin-left: 130px;
-  width: 100%;
+  /* width: 100%; */
   height: 100%;
   /* overflow-x: hidden;
   overflow-y: auto; */
@@ -156,9 +156,10 @@ a {
     margin-left: 0px;
   }
   .sidebar-component-container {
-    width: 100vw;
+    width: 100%;
     position: fixed;
-    /* left: 0; */
+    left: 0;
+    height: auto;
     top: 0;
     z-index: 100;
   }
